<resources>
    <string name="app_name" translatable="false">Debt Dragon</string>
    <string name="loginHeader">Přihlášení</string>
    <string name="e_mail">E-mail</string>
    <string name="e_mailHint">jan.novak@domena.cz</string>
    <string name="password_label">Heslo</string>
    <string name="password_hint">123456</string>
    <string name="login_button_text">Přihlásit</string>
    <string name="LoginSuccessful">Přihlášení úspěšné</string>
    <string name="terms_and_conditions"><u>Všeobecnými podmínkami</u></string>
    <string name="password_not_same">Hesla se neshodují</string>
    <string name="passwor_must_have">"Heslo musí mít alespoň "</string>
    <string name="number_of_characters">" znaků"</string>
    <string name="mail_is_not_in_form">E-mail není ve tvaru nazev@domena.cz</string>
    <string name="type_in_name">Zadejte jméno</string>
    <string name="currency">" Kč"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration_succesful">Registrace úspěšná</string>
    <string name="registration_failed">Registrace neúspěšná</string>
    <string name="mail_cannot_be_empty">E-mail nemůže být prázdný</string>
    <string name="password_cannot_be_empty">Heslo nemůže být prázdné</string>
    <string name="log_in_successful">Přihlášení úspěšné</string>
    <string name="addFriend_name_cant_be_empty">E-mail přítele nemůže být prázdný</string>
    <string name="Canceled">Zrušeno</string>
    <string name="category_food">Potraviny</string>
    <string name="category_entertainment">Zábava</string>
    <string name="categroy_finance">Finance</string>
    <string name="category_clothing_access">Oblečení a doplňky</string>
    <string name="category_electronics">Elektronika</string>
    <string name="category_other">Ostatní</string>
    <string name="payer_me">Já</string>
    <string name="category_payment">Platba</string>
    <string name="category_g_debts">Dluhy ze skupin</string>
    <string name="dashborad_summary_debts_are_equal">Vaše dluhy jsou vyrovnány</string>
    <string name="dashboard_summary_you_own_to_friends">Celkem dlužíte přátelům</string>
    <string name="dashboard_summary_friends_owe_you">Přátelé Vám celkem dluží</string>
    <string name="Me">Já</string>
    <string name="Friends">Přátelé</string>
    <string name="payments_cant_be_edited">Platby nelze editovat</string>
    <string name="gdebts_cant_be_edited">Dluhy ze skupin nelze editovat</string>
    <string name="is_sending_you_friend_request">Vám odesílá žádost o přátelství.</string>
    <string name="friends">Přátelé</string>
    <string name="requests">Žádosti</string>
    <string name="delete_debt">Odstranit dluh</string>
    <string name="delete_debt_message">Jste si jistý že chcete dluh odstranit?</string>
    <string name="yes">Ano</string>
    <string name="No">Ne</string>
    <string name="create_new_debt">Založit dluh</string>
    <string name="debt_detail">Detail dluhu</string>
    <string name="sent">Odesláno</string>
    <string name="friend_debt_ration">Poměr dluhů přitele</string>
    <string name="remove_friend_title_dialog">Odebrat uživatele z přátel</string>
    <string name="remove_friend_message_dialog">Provedením této akce odeberete uživatele z přátel. Pokračovat?</string>
    <string name="add_edit_debt_enter_debt_name">Zadejte název dluhu</string>
    <string name="add_edit_debt_enter_debt_value">Zadejte částku</string>
    <string name="add_edit_debt_value_must_be_grater_than_0">Zadejte částku vyšší než 0</string>
    <string name="add_edit_debt_please_choose_category">Zvolte prosím kategorii</string>
    <string name="add_friend_user_not_found">Uživatel nenalezen</string>
    <string name="add_friend_cannot_add_yourself">Nelze přidat sám sebe</string>
    <string name="add_friend_user_already_in_friends">Tento uživatel již v přátelích je</string>
    <string name="add_friend_request_already_sent">Tohoto přitele jste již požádali</string>
    <string name="create_payment_debt_payment">Splátka dluhu</string>
    <string name="payment_error_value_must_be_greater_than_0">Částka musí být větší něž 0</string>
    <string name="QR_payment_from_user">"MSG:Platba dluhu od uživatele "</string>
    <string name="QR_from_aplication_DD_with_value">" z aplikace DebtDragon ve výši "</string>
    <string name="friend_detail_friend_owes_you">"Přítel vám dluží "</string>
    <string name="friend_detail_you_owe_friend">"Dlužíte příteli "</string>
    <string name="friend_detail_your_debts_are_settled">Vaše dluhy jsou vyrovnány</string>
    <string name="add_edit_group_debt_delete_group_debt">Odstranit dluh</string>
    <string name="add_edit_group_debt_delete_group_debt_message">Opravdu chcete odstranit dluh?</string>
    <string name="add_group_member_no_users_selected">Nejsou vybráni žádní uživatelé</string>
    <string name="add_group_memeber_user_added">Uživatelé přidáni</string>
    <string name="bill_detail_fragment_group_deleted">Skupina byla odstraněna</string>
    <string name="bill_detail_fragment_bill_deleted">Účet byl smazán</string>
    <string name="bill_detail_fargment_delete_bill_dialog_title">Odstranit účet</string>
    <string name="bill_detail_fragment_delete_bill_dialog_message">Všechny položky na účtě budou ztraceny. Jste si jistý že chcete účet odstranit?</string>
    <string name="bill_detail_gdebt_click_only_admin_owner_can_edit">Editovat může jenom správce skupiny  nebo plátce</string>
    <string name="bill_detail_gdebt_click_group_is_locked">Skupina je uzamčena</string>
    <string name="group_detail_lock_group_dialog_title">Uzamknout skupinu</string>
    <string name="group_detail_lock_group_dialog_message">Po uzamčení skupiny bude možné položky pouze prohlížet a nebude možné je přidávat ani upravovat. Skupinu je možné kdykoliv opět odemknout. Přejete si pokračovat?</string>
    <string name="group_detail_unlock_group_dialog_title">Odemknout skupinu</string>
    <string name="group_detail_unlock_group_dialog_message">Skupina bude odemčena a budou možné její úpravy. Ostatní členové budou moci přidávat položky. Přejete si pokračovat?</string>
    <string name="group_detail_unlock_group_with_payments_dialog_title">Odemknout skupinu s výsledky</string>
    <string name="group_detail_unlock_group_with_payments_dialog_message">Odemčením skupiny budou zpřístupněny úpravy, ale rozpočítané transakce budou ztraceny a bude nutné je znovu spočítat. Chcete pokračovat?</string>
    <string name="group_detail_calculate_group_dialog_title">Uzamknout a rozpočítat</string>
    <string name="group_detail_calculate_group_dialog_message">Skupina bude uzamčena a následně rozpočítány dluhy, proces může chvíli trvat. Chcete pokračovat?</string>
    <string name="group_detail_fragment_leave_group_dialog_title">Opustit skupinu</string>
    <string name="group_detail_fragment_leave_group_dialog_message">Opuštěním skupiny do ní ztratíte přístup, vaše záznamy zůstanou zachovány, ale nebudete mít přístup k výsledkům rozpočítání. Opouštění skupiny před rozpočítáním se nedoporučuje. Chcete přesto pokračovat?</string>
    <string name="group_detail_fragment_delete_group_dialog_title">Smazat skupinu</string>
    <string name="group_detail_fragment_delete_group_dialog_message">Skupina bude smazána a veškerá data odstraněna. Přejete si pokračovat?</string>
    <string name="group_results_reset_group_true_title">Resetovat skupinu</string>
    <string name="group_results_reset_group_true_message">Skupina bude resetována - budou smazány všechny účty a jejich položky. Seznam členů se nezmění. Přejete si pokračovat?</string>
    <string name="group_results_reset_group_false_title">Resetovat skupinu</string>
    <string name="group_results_reset_group_false_message">Některé položky rozpočítání dluhů ještě nebyly zaplaceny. Resetováním skupiny budou smazány všechny účty a jejich položky. Seznam členů se nezmění. Přejete si přesto pokračovat?</string>
    <string name="remove_group_members_no_users_selected">Nejsou vybráni žádní uživatelé</string>
    <string name="remove_group_members_users_removed">Uživatelé odebráni</string>
    <string name="create_edit_group_fragment_save_changes">Uložit změny</string>
    <string name="create_edit_group_fragment_edit_group">Upravit skupinu</string>
    <string name="create_edit_group_fragment_create_group">Vytvořit skupinu</string>
    <string name="create_edit_group_fragment_create_new_group">Vytvořit novou skupinu</string>
    <string name="group_detail_viewmodel_create_bill_name_cannot_empty">Název nemůže být prádzný</string>
    <string name="group_debt_view_model_add_bill_add_new_bill">Přidat novou položku</string>
    <string name="group_debt_view_model_add_bill_edit_bill">Upravit položku</string>
    <string name="group_debt_view_model_group_debt_name_cant_be_empty">Název nemůže být prázdný</string>
    <string name="group_debt_view_model_group_debt_value_cant_be_empty">Výše částky nemůže být prázdná</string>
    <string name="group_debt_view_model_group_debt_value_must_be_grater_than_0">Částka musí být větší než 0</string>
    <string name="group_debt_view_model_group_debt_select_debtor">Vyberte dlužníka</string>
    <string name="group_debt_view_model_create_debt_debt_from_group">\"Dluh ze sk. \"</string>
    <string name="group_debt_view_model_group_reseted">Skupina resetována</string>
    <string name="change_account_fragment_delete_account_title">Odstranit účet</string>
    <string name="change_account_fragment_delete_account_message">Váš účet bude odebrán z aplikace a vaši přátelé již nebudou moci generovat QR kódy pro platby. Přejete si pokračovat?</string>
    <string name="change_account_fragment_account_added">Účet uložen</string>
    <string name="change_name_fragment_name_changed">Jméno změněno</string>
    <string name="change_password_fragment_change_password_title">Změnit heslo</string>
    <string name="change_password_fragment_change_password_message">Po změně hesla budete odhlášeni a bude nutné se znovu přihlásit novým heslem. Přejete si pokračovat?</string>
    <string name="change_account_view_model_account_is_not_in_iban">Účet není ve formátu IBAN</string>
    <string name="change_name_view_model_name_cannot_be_empty">Jméno nemůže být prázdné</string>
    <string name="change_password_view_model_something_went_wrong">Něco se nepovedlo</string>
    <string name="change_password_view_model_password_cant_be_empty">Heslo nemůže být prázdné</string>
    <string name="register_full_name">Celé jméno</string>
    <string name="register_password_again">Heslo znovu</string>
    <string name="registration_register_title">Registrace</string>
    <string name="registration_accept_terms">"Souhlasím s "</string>
    <string name="register_register_button">Registrovat</string>
    <string name="register_btn_already_account">Již mám účet</string>
    <string name="btn_cancel">Zrušit</string>
    <string name="reset_password_dialog_title">Resetovat heslo</string>
    <string name="reset_password_dialog_subtitle">Zadejte registrační email</string>
    <string name="reset_password_dialog_registration_mail">Registrační e-mail</string>
    <string name="reset_password_dialog_btn_reset_password">Resetovat heslo</string>
    <string name="friend_detail_menu_remove_friend">Odstranit přítele</string>
    <string name="friend_detail_menu_generate_qr">Generovat QR</string>
    <string name="friend_detail_menu_create_payment">Vytvořit splátku</string>
    <string name="group_detail_menu_show_members">Zobrazit členy</string>
    <string name="group_detail_menu_lock_group">Uzamknout skupinu</string>
    <string name="group_detail_menu_calculate_group">Rozpočítat dluhy</string>
    <string name="group_detail_menu_edit_group">Upravit skupinu</string>
    <string name="group_detail_menu_delete_group">Odstranit skupinu</string>
    <string name="group_detail_menu_leave_group">Opustit skupinu</string>
</resources>