<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/delete_friend"
        android:icon="@drawable/ic_home"
        android:orderInCategory="100"
        android:title="@string/friend_detail_menu_remove_friend"
        app:showAsAction="never" />
    <item
        android:id="@+id/generateQR"
        android:icon="@drawable/ic_baseline_qr_code_24"
        android:orderInCategory="100"
        android:title="@string/friend_detail_menu_generate_qr"
        app:showAsAction="always" />
    <item
        android:id="@+id/createPayment"
        android:icon="@drawable/ic_baseline_payments_24"
        android:orderInCategory="100"
        android:title="@string/friend_detail_menu_create_payment"
        app:showAsAction="ifRoom" />
</menu>