<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="tech.janhoracek.debtdragon.signinguser.RegisterViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="25dp"
            android:orientation="vertical"
            tools:context=".signinguser.RegisterActivity">

            <FrameLayout
                android:id="@+id/loading_animation_mainActivity"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toBottomOf="@id/tv_RegisterActivity_RegisterLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/ActivityLogin_animatedLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:scaleType="fitCenter"
                    app:lottie_autoPlay="true"
                    app:lottie_rawRes="@raw/login_animation" />
            </FrameLayout>

            <TextView
                android:id="@+id/tv_RegisterActivity_RegisterLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registration_register_title"

                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="17sp"
                android:textStyle="bold"

                app:layout_constraintBottom_toTopOf="@id/linearLayout2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loading_animation_mainActivity" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/btn_RegisterActivity_Register"
                app:layout_constraintTop_toBottomOf="@+id/tv_RegisterActivity_RegisterLabel">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout_RegisterActivity_Name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/register_full_name"
                    app:errorEnabled="true"
                    app:errorText="@{viewmodel.nameError}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInput_RegisterActivity_NameInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:inputType="textPersonName"
                        android:text="@={viewmodel.nameContent}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout_RegisterActivity_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/e_mail"
                    app:errorEnabled="true"
                    app:errorText="@{viewmodel.emailError}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInput_RegisterActivity_EmailInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:inputType="textEmailAddress"
                        android:text="@={viewmodel.emailContent}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout_RegisterActivity_Password1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/password_label"
                    app:endIconMode="password_toggle"
                    app:errorEnabled="true"
                    app:errorText="@{viewmodel.passwordErrorLength}"

                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInput_RegisterActivity_Password1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:inputType="textPassword"
                        android:text="@={viewmodel.password1Content}"
                        app:helperTextEnabled="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout_RegisterActivity_Password2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/register_password_again"
                    app:endIconMode="password_toggle"
                    app:errorEnabled="true"
                    app:errorText="@{viewmodel.passwordErrorSimilarity}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInput_RegisterActivity_Password2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:inputType="textPassword"
                        android:text="@={viewmodel.password2Content}"
                        app:helperTextEnabled="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkBox_RegisterActivity_Terms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/main"
                        android:text="@string/registration_accept_terms" />

                    <TextView
                        android:id="@+id/tv_RegisterActivity_Terms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/terms_and_conditions"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_RegisterActivity_Register"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"

                android:layout_marginBottom="20dp"
                android:enabled="false"
                android:onClick="@{()-> viewmodel.onRegisterClick()}"
                android:text="@string/register_register_button"

                app:layout_constraintBottom_toTopOf="@+id/btn_RegisterActvitiy_AlreadyAccount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/btn_RegisterActvitiy_AlreadyAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="20dp"

                android:text="@string/register_btn_already_account"
                android:textAlignment="center"
                android:textStyle="bold"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>